# sec-ai

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  lcov.info  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dev_utils/debug_dashboard/: app.py  config.py  sec_data_retrieval.py  streamlit_utils.py
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
docs/source/notebooks/: comprehensive_developer_guide.ipynb  developer_guide.ipynb  quickstart_user_guide.ipynb  user_guide.ipynb
sec_ai/: hello.py
sec_ai/web/: app.py  config.py  dashboard_helpers_and_types.py  sec_data_retriever.py  streamlit_ui_customizations.py
tests/: test_hello.py
tests/unit/: test_hello.py
